adding new configws

--- a/examples/WeatherStation/data/wifiConfig.json
+++ b/examples/WeatherStation/data/wifiConfig.json
@@ -1,26 +1,7 @@
 [
   {
-    "ssid": "erwan-home",
-    "bssid": "4f:a6:3c:9c:ff:57",
-    "security": "WPA2_PSK",
-    "psk": "biohacking"
-  },
-  {
-    "ssid": "lapaillasse",
-    "bssid": "24:a4:3c:9e:d2:84",
-    "security": "WPA2-PSK",
-    "psk": "va-te-faire-connecter"
-  },
-  {
-    "ssid": "SFR_DDE8",
-    "bssid": "c4:0b:cb:2a:c3:c6",
-    "security": "WPA2-PSK",
-    "psk": "3prw47suad2xra93shuu"
-  },
-  {
-    "ssid": "LaPailasse",
-    "bssid": "08:BD:43:CB:47:15",
-    "security": "WPA2-PSK",
-    "psk": "3prw47suad2xra93shuu"
+    "bssid": "E0:94:67:0F:0A:8F",
+    "ssid": "hackademy123",
+    "psk": "12345678"
   }
 ]
